# yhack-2026

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  PLAN.md  README.md  ideas.txt
backend/: pyproject.toml
backend/src/: app.py  config.py  constants.py  custom_puzzle.py  custom_puzzle_runtime.py  domain_types.py  judge.py  puzzle.py  rating.py  run-gunicorn.sh  run.sh  snekbox.py  store.py
backend/src/puzzles/: ai_generated_common.py  ai_generated_easy_v1_puzzle.py  ai_generated_expert_v1_puzzle.py  ai_generated_hard_v1_puzzle.py  ai_generated_medium_v1_puzzle.py  algorithms_index_pair_v2_puzzle.py  common.py  crypto_lsb_steganography_v1_puzzle.py  crypto_shift_inference_v2_puzzle.py  crypto_substitution_inference_v2_puzzle.py  crypto_xor_byte_inference_v1_puzzle.py  datastructures_bracket_structure_v2_puzzle.py  greedy_interval_selection_v2_puzzle.py  numeric_add_reversed_number_v1_puzzle.py  numeric_gcd_value_v1_puzzle.py  numeric_lcm_value_v1_puzzle.py  numeric_linear_transform_v1_puzzle.py  numeric_prime_number_v1_puzzle.py  numeric_total_factor_count_v1_puzzle.py  search_grid_navigation_v2_puzzle.py  strings_window_length_v2_puzzle.py
backend/src/yhack_backend/: app.py  constants.py  judge.py  puzzle.py  rating.py  run.sh  store.py
backend/tests/: conftest.py  test_api.py  test_judge.py  test_puzzle.py  test_rating.py
deploy/nginx/: play-enigma.xyz.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: engimga.html
frontend/src/: App.svelte  app-types.ts  app.css
frontend/src/components/: AdminView.svelte  (+7 more)
