[project]
name = "yhack-backend"
version = "0.1.0"
description = "Initial prototype backend for yhack-2026"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sock>=0.7.0",
]

[project.scripts]
yhack-backend = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
